// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageSelector Snapshots matches snapshot when loading 1`] = `
<View
  style={
    [
      {
        "zIndex": 1000,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#f0f0f0",
        "borderColor": "#ddd",
        "borderRadius": 8,
        "borderWidth": 1,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
  >
    <ActivityIndicator
      color="#007AFF"
      size="small"
    />
  </View>
</View>
`;

exports[`LanguageSelector Snapshots matches snapshot with RTL language 1`] = `
<View
  style={
    [
      {
        "zIndex": 1000,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#f0f0f0",
        "borderColor": "#ddd",
        "borderRadius": 8,
        "borderWidth": 1,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#333",
          "fontSize": 14,
          "fontWeight": "500",
        }
      }
    >
      🌐 
      Arabic
    </Text>
  </View>
</View>
`;

exports[`LanguageSelector Snapshots matches snapshot with custom style 1`] = `
<View
  style={
    [
      {
        "zIndex": 1000,
      },
      {
        "marginTop": 10,
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#f0f0f0",
        "borderColor": "#ddd",
        "borderRadius": 8,
        "borderWidth": 1,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#333",
          "fontSize": 14,
          "fontWeight": "500",
        }
      }
    >
      🌐 
      English
    </Text>
  </View>
</View>
`;

exports[`LanguageSelector Snapshots matches snapshot with default props 1`] = `
<View
  style={
    [
      {
        "zIndex": 1000,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#f0f0f0",
        "borderColor": "#ddd",
        "borderRadius": 8,
        "borderWidth": 1,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
  >
    <Text
      style={
        {
          "color": "#333",
          "fontSize": 14,
          "fontWeight": "500",
        }
      }
    >
      🌐 
      English
    </Text>
  </View>
</View>
`;

exports[`LanguageSelector Snapshots matches snapshot with modal open 1`] = `
<View
  style={
    [
      {
        "zIndex": 1000,
      },
      undefined,
    ]
  }
  testID="language-selector"
>
  <View
    accessibilityLabel="Current language: English"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "backgroundColor": "#f0f0f0",
        "borderColor": "#ddd",
        "borderRadius": 8,
        "borderWidth": 1,
        "opacity": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
    testID="language-selector-button"
  >
    <Text
      style={
        {
          "color": "#333",
          "fontSize": 14,
          "fontWeight": "500",
        }
      }
      testID="language-selector-text"
    >
      🌐 
      English
    </Text>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    testID="language-selector-modal"
    transparent={true}
    visible={true}
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "flex": 1,
          "justifyContent": "flex-end",
          "opacity": 1,
        }
      }
      testID="language-selector-modal-overlay"
    >
      <View
        style={
          {
            "backgroundColor": "white",
            "borderTopLeftRadius": 20,
            "borderTopRightRadius": 20,
            "maxHeight": "80%",
            "paddingBottom": 20,
          }
        }
        testID="language-selector-modal-content"
      >
        <View
          style={
            {
              "alignItems": "center",
              "borderBottomColor": "#eee",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "padding": 20,
            }
          }
          testID="language-selector-modal-header"
        >
          <Text
            style={
              {
                "color": "#333",
                "fontSize": 18,
                "fontWeight": "bold",
              }
            }
            testID="language-selector-modal-title"
          >
            Select Language
          </Text>
          <View
            accessibilityLabel="Close language selector"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
                "padding": 4,
              }
            }
            testID="language-selector-modal-close"
          >
            <Text
              style={
                {
                  "color": "#666",
                  "fontSize": 24,
                }
              }
            >
              ✕
            </Text>
          </View>
        </View>
        <RCTScrollView
          data={
            [
              {
                "code": "en",
                "name": "English",
              },
              {
                "code": "es",
                "name": "Spanish",
              },
              {
                "code": "ar",
                "name": "Arabic",
              },
            ]
          }
          getItem={[Function]}
          getItemCount={[Function]}
          keyExtractor={[Function]}
          onContentSizeChange={[Function]}
          onLayout={[Function]}
          onMomentumScrollBegin={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={0.0001}
          stickyHeaderIndices={[]}
          style={
            {
              "maxHeight": 400,
            }
          }
          testID="language-selector-list"
          viewabilityConfigCallbackPairs={[]}
        >
          <View>
            <View
              onFocusCapture={[Function]}
              onLayout={[Function]}
              style={null}
            >
              <View
                accessibilityLabel="Select English"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": true,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#e3f2fd",
                    "borderBottomColor": "#f0f0f0",
                    "borderBottomWidth": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="language-selector-item-en"
              >
                <Text
                  style={
                    [
                      {
                        "color": "#333",
                        "fontSize": 16,
                      },
                      {
                        "color": "#1976d2",
                        "fontWeight": "600",
                      },
                    ]
                  }
                  testID="language-selector-item-text-en"
                >
                  English
                </Text>
                <Text
                  style={
                    {
                      "color": "#1976d2",
                      "fontSize": 18,
                      "fontWeight": "bold",
                    }
                  }
                  testID="language-selector-checkmark-en"
                >
                  ✓
                </Text>
              </View>
            </View>
            <View
              onFocusCapture={[Function]}
              onLayout={[Function]}
              style={null}
            >
              <View
                accessibilityLabel="Select Spanish"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": false,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderBottomColor": "#f0f0f0",
                    "borderBottomWidth": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="language-selector-item-es"
              >
                <Text
                  style={
                    [
                      {
                        "color": "#333",
                        "fontSize": 16,
                      },
                      false,
                    ]
                  }
                  testID="language-selector-item-text-es"
                >
                  Spanish
                </Text>
              </View>
            </View>
            <View
              onFocusCapture={[Function]}
              onLayout={[Function]}
              style={null}
            >
              <View
                accessibilityLabel="Select Arabic"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": false,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "borderBottomColor": "#f0f0f0",
                    "borderBottomWidth": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="language-selector-item-ar"
              >
                <Text
                  style={
                    [
                      {
                        "color": "#333",
                        "fontSize": 16,
                      },
                      false,
                    ]
                  }
                  testID="language-selector-item-text-ar"
                >
                  Arabic
                </Text>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </Modal>
</View>
`;
